--- a/config.toml
+++ b/config.toml
@@ -32,17 +32,16 @@ wide_navbar = false
 
 # Social icons that will appear under your profile box
 social_icons = [
-{icon="fa-envelope", icon_pack="fa", link=""},
-{icon="ai-google-scholar", icon_pack="ai", link=""},
+{icon="fa-envelope", icon_pack="fa", link="mailto:fuman.xie@uq.edu.au"},
+{icon="ai-google-scholar", icon_pack="ai", link="https://scholar.google.com.my/citations?hl=en&pli=1&user=O_4wjM0AAAAJ"},
 {icon="fa-github", icon_pack="fa-brands", link="https://github.com/xie00059" },
-{icon="fa-orcid", icon_pack="fa-brands", link="" },
+{icon="fa-orcid", icon_pack="fa-brands", link="https://orcid.org/0000-0002-5446-3081" },
 ]
 
 # Your interests
 interests = [
-    { label = "Photography"},
+    { label = "Painting"},
     { label = "Travel"},
-    { label = "Cooking"},
     { label = "History"},
 ]
 
